fix slider on iOS devices

--- a/css/style.css
+++ b/css/style.css
@@ -10295,6 +10295,7 @@ body {
 	.swiper.year-slider .swiper-pagination-buttons button {
 		font-size: 16px;
 		line-height: 24px;
+		padding: 0 6px;
 	}
 	.modal-footer .partners-list-elem {
 		max-width: calc((100% - 1.5rem) / 2) !important;
